# c2r-FFI

./: Cargo.toml  README.md  RULE.md
clang_fixes/: binr_blob_r2blob_iter_1.json  binr_blob_r2blob_iter_3.json  binr_blob_r2blob_iter_4.json
crates/c2rs-agent/: Cargo.toml
crates/c2rs-agent/src/: lib.rs  patch.rs  prompt.rs
crates/c2rs-cli/: Cargo.toml
crates/c2rs-cli/src/: main.rs
crates/c2rs-core/: Cargo.toml
crates/c2rs-core/src/: codegen.rs  extract.rs  ir.rs  lib.rs  passes.rs  validate.rs
crates/c2rs-tests/: Cargo.toml
crates/c2rs-tests/src/: lib.rs
crates/c2rs-toolchain/: Cargo.toml
crates/c2rs-toolchain/src/: deepseek.rs  lib.rs  ollama.rs
docs/: EVALUATION.md  architecture.md  ir_schema.md  type_mapping.md
examples/c/mini1/: main.c
examples/c/mini2/: calc.c
examples/c/mini3/: main.c
examples/ir/: sample_module.json
