[package]
name = "c2rs-tests"
version = "0.1.0"
edition = "2021"
description = "Integration tests and fixtures for C→IR→Rust"

[dependencies]
c2rs-agent = { path = "../c2rs-agent" }
c2rs-core = { path = "../c2rs-core" }
c2rs-toolchain = { path = "../c2rs-toolchain" }
anyhow = "1"
tempfile = "3"
serde_json = "1"
