[package]
name = "c2rs-toolchain"
version = "0.1.0"
edition = "2021"
description = "C→IR and IR→Rust deterministic toolchain"

[dependencies]
c2rs-core = { path = "../c2rs-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tempfile = "3"
ureq = { version = "2", default-features = false }
